QmlCompiler: Fix side effect detection for array methods

Array methods that manipulate the array they are called on always have
side effects, on that array. In order to optimize them out we'd have to
do some more involved tracking of affected values.

Amends commit e84686415187455a7153d61ca82478053f13e3f9

Fixes: QTBUG-126834
Change-Id: Ia4395ea21e89590e6ffe95e236f70b5e64402f5e
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit ae76c8f428e9ca7ac5d398b51ffdb03407a26f04)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 2889e7963b3a8831ed3c15ff1e68293ee85dc079)