src/qmlcompiler/qqmljstypepropagator.cpp
@@ -1556,10 +1556,6 @@ bool QQmlJSTypePropagator::propagateArrayMethod(
     const auto valueContained = baseContained->valueType();
     const auto valueType = m_typeResolver->globalType(valueContained);
 
-    const bool canHaveSideEffects = (baseType.isProperty() && baseType.isWritable())
-            || baseContained->isListProperty()
-            || baseType.isConversion();
-
     const auto setReturnType = [&](const QQmlJSScope::ConstPtr type) {
         setAccumulator(m_typeResolver->returnType(
                 type, QQmlJSRegisterContent::MethodReturnValue, baseContained));
@@ -1574,7 +1570,7 @@ bool QQmlJSTypePropagator::propagateArrayMethod(
         for (int i = 0; i < argc; ++i)
             addReadRegister(argv + i, intType);
 
-        m_state.setHasSideEffects(canHaveSideEffects);
+        m_state.setHasSideEffects(true);
         setReturnType(baseContained);
         return true;
     }
@@ -1593,7 +1589,7 @@ bool QQmlJSTypePropagator::propagateArrayMethod(
         for (int i = 1; i < argc; ++i)
             addReadRegister(argv + i, intType);
 
-        m_state.setHasSideEffects(canHaveSideEffects);
+        m_state.setHasSideEffects(true);
         setReturnType(baseContained);
         return true;
     }
@@ -1625,7 +1621,7 @@ bool QQmlJSTypePropagator::propagateArrayMethod(
     }
 
     if ((name == u"pop" || name == u"shift") && argc == 0) {
-        m_state.setHasSideEffects(canHaveSideEffects);
+        m_state.setHasSideEffects(true);
         setReturnType(valueContained);
         return true;
     }
@@ -1639,13 +1635,13 @@ bool QQmlJSTypePropagator::propagateArrayMethod(
         for (int i = 0; i < argc; ++i)
             addReadRegister(argv + i, valueType);
 
-        m_state.setHasSideEffects(canHaveSideEffects);
+        m_state.setHasSideEffects(true);
         setReturnType(m_typeResolver->int32Type());
         return true;
     }
 
     if (name == u"reverse" && argc == 0) {
-        m_state.setHasSideEffects(canHaveSideEffects);
+        m_state.setHasSideEffects(true);
         setReturnType(baseContained);
         return true;
     }
@@ -1682,7 +1678,7 @@ bool QQmlJSTypePropagator::propagateArrayMethod(
         for (int i = 2; i < argc; ++i)
             addReadRegister(argv + i, valueType);
 
-        m_state.setHasSideEffects(canHaveSideEffects);
+        m_state.setHasSideEffects(true);
         setReturnType(baseContained);
         return true;
     }
